
version XXXX - XXXX
 . Actions: they are not cloned. If you want to reuse them, clone them manually using the method 'copy'
 . Actions: CallFunc, CallFuncN using performSelector instead of NSInvocator
 . Actions: added CallFuncN action. First argument is the target node
 . Core: Using own scheduler to schedule timers/etc... pause/resume works as expected
 . Director: can initialize the view with pixel format RGBA8 or RGB565 (default)
 . Director: if in landscape mode, tells the application to be in landscape mode too
 . Director: landscape mode is LEFT again, since "Touch fighter" (apple game) uses left landscape
 . Label: supports changing it's string
 . Menu: added support for y-offset
 . MenuItem: font size and font name are customizables
 . MenuItems: doesn't have "artifacts"
 . Texture Node: Added FadeIn/FadeOut support
 . Texture Node: Added transform anchor support
 . Texture Node: Added color suppport
 . Texture Node: Added new cocos2d node. Base class of Sprite and Label
 

version 0.2.1 - 21-Jul-2008
 . Director: landscape can be RIGHT or LEFT (at compile time)
 . Director: proxies touchesCancelled
 . Particle System: added smoke particle.
 . Particle System: fire example improved.
 . Particle System: supports for additive and blend colors
 . Particle System: splited in 2 files: particle.[hm] and ParticleSystems.[hm]
 . Particle System: doesn't iterate over dead particles
 . Particle System: fire.png uses white color, so "blend" mode works ok. fire.png is smaller (less resources)
 
version 0.2 - 5-Jul-2008
 . Replaced CGPoint with chipmunk's vector (cpVect) in CocosNode
 . Added particle system.
    . uses VBO + POINT_SPRITES
    . Built-in systems: Fire, Fireworks, Sun, Galaxy, Flower, Meteor, Spiral, Explosion
	. supports: system duration, paticle duration, gravity, radial, tangential, color, size, texture, direction, spread (all of them with its variation)
 . added support to display FPS
 
version 0.1 - 25-jun-2008:

25-jun-2008: